--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "plugins": [
     {
-      "slug": "sl-envios",
-      "name": "SL Envíos",
-      "version": "2.0.0",
-      "zip_url": "https://github.com/Rotivic/sl-envios/releases/download/2.0.0/sl-envios-2.0.0.zip",
+      "slug": "sl-test-banner",
+      "name": "SL Test Banner",
+      "version": "1.0.0",
+      "zip_url": "https://github.com/tu-org/sl-test-banner/releases/download/1.0.0/sl-test-banner-1.0.0.zip",
       "requires_wp": "6.1",
       "tested": "6.6"
     }
